# tonho

./: .black  .env.example  .flake8  .gitignore  README.md
shuro/: index.html  package-lock.json  package.json
shuro/src/: App.tsx  main.tsx  routes.ts
shuro/src/components/: PageHeader.tsx
shuro/src/layout/: Layout.tsx
shuro/src/layout/components/: ColorSchemeToggle.tsx  Header.tsx  Logo.tsx  Sidebar.tsx
shuro/src/pages/: p404.tsx
shuro/src/pages/home/: Home.tsx
shuro/src/pages/school/calendar/: SchoolCalendarHome.tsx
zhou/: manage.py  pyproject.toml
zhou/core/: admin.py  models.py  serializers.py  views.py
zhou/core/migrations/: 0001_initial.py
zhou/school/: admin.py  models.py  serializers.py  urls.py  views.py
zhou/school/migrations/: 0001_initial.py  0002_alter_term_options_term_enrollment_end_date_and_more.py  0003_clazzroom.py
zhou/zhou/: asgi.py  settings.py  urls.py
